--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ h1 {
 }
 h2 {
     font-size: 2em;
+    text-align: center;
 }
 
 header h1{
@@ -118,21 +119,23 @@ main section p{
     text-align: left;
     padding: 10px;
 }
-.response{
+.response {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
-    
-}
-.photos{
+  }
+  
+  .photos {
     padding-left: 10px;
-}
-.desc{
+  }
+  
+  .desc {
     text-align: center;
     height: 15rem;
     margin-top: -15rem;
     font-weight: bolder;
-}
+  }
+  
 #contact{
     background-color: black;
     padding: 20px;
@@ -140,7 +143,7 @@ main section p{
 #contact p,label{
     color: #ffffff;
 }
-#contact h1{
+#contact h2{
     color: #ffffff;
 }
 input[type=text],
@@ -166,15 +169,16 @@ footer{
     text-align: center;
     padding: 20px;
 }
+
 @media only screen and (max-width: 1300px) {
     .response {
-        grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
     }
   }
   
   @media only screen and (max-width: 500px) {
     .response {
-        grid-template-columns: 1fr;
+      grid-template-columns: 1fr;
     }
-
-    }
+  }
+  
