--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ header h1{
     padding: 10px;
     font-size:35px;
     font-weight: bolder;
+    text-decoration: none;
 }
 header h1 a{
     color: #007d7b;
